# prova-gertech-cpp

./: CMakeLists.txt  GertechCppExample.cpp  GertechCppExample.h  README.md  main_window.cpp  main_window.h
